# TVF-Chatbot

./: ..replit.1333424403~  .replit  chat.py  main.py  models.py  pyproject.toml  requirements.txt  scraper.py
instance/: database.db  database.sqlite
static/css/: style.css
static/js/: chat.js
templates/: chat.html  index.html  register.html
